--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
     line-height: 20px;
     font-family: monospace;
     background: rgb(12, 80, 100);
+    background-image: url(img/background.jpg);
   }
 
   main {
@@ -24,12 +25,39 @@ body {
 
   header {
     display: flex;
+    flex-direction: column;
     flex-wrap:nowrap;
     background: rgb(29, 134, 103);
     min-height: 20vh;
+    align-items: space-around;
+  }
 
-    
+  .container-header {
+    display: flex;
+    flex-wrap: nowrap;
+    background: rgb(29, 134, 103);
     align-items: center;
+    justify-content:center;
+  }
+
+  .navigation {
+    font: Avantgarde;
+  }
+
+  .page-navigation {
+    list-style-type: none;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    
+  }
+
+  .page-navigation-item {
+    list-style-type: none;
+  }
+
+  a:link, a:visited, a:active {
+    color: black; 
   }
 
   img {
@@ -37,6 +65,8 @@ body {
     height: 75px;
     border-radius: 50%;
   }
+
+
 
   section {
     flex-basis: 50%;
