--- a/style.css
+++ b/style.css
@@ -5,11 +5,11 @@
 body {
     
     max-width: 1024px;
-    
-    min-height: 100vh;
+    border: 3px solid rgb(110, 0, 0);
+  /*min-height: 100vh;*/
     margin: auto;
-    display: flex;
-    flex-direction: column;
+   /* display: flex;*/
+   /* flex-direction: column;*/
     padding: 0px;
     font-size: 16px;
     line-height: 20px;
@@ -20,16 +20,30 @@ body {
 
   main {
     display: flex;
-    min-height: 70vh;
+    flex-wrap: wrap;
+  }
+
+
+  section {
+    flex-basis: 400px;
+    flex-grow: 1;
+    text-align: center;
+  }
+
+  @media  screen and (max-width: 700px) {
+      main {
+      flex-direction: column;
+    }
   }
 
   header {
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
-    background: rgb(29, 134, 103);
+    background: rgb(29, 136, 127);
     min-height: 20vh;
     align-items: space-around;
+    font-size: 16px;
   }
 
   .container-header {
@@ -65,49 +79,34 @@ body {
     border-radius: 50%;
   }
 
-  main {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    overflow:auto;
-  }
-
-  .section-container {
-    display: flex;
-    flex-wrap: wrap;
-  }
-
-  section {
-    flex-basis: 50%;
-  }
 
   #about-myself {
-    background:rgb(50, 185, 145);
+    background:#2bb88d;
   }
 
 
   #contacts {
-    background:rgb(58, 168, 135);
+    background:#22c292;
   }
 
   #skills {
     flex-basis: 50%;
-    background:rgb(58, 168, 135);
+    background:#18ce97;
   }
 
   #education {
     flex-basis: 50%;
-    background:rgb(50, 185, 145);
+    background:#25d8a2;
   }
 
   #languages {
     flex-basis: 50%;
-    background:rgb(50, 185, 145);
+    background:#22c292;
   }
 
   #project {
     flex-basis: 50%;
-    background:rgb(58, 168, 135);
+    background: #2bb88d;
   }
 
   #code-example {
@@ -135,7 +134,7 @@ body {
   #languages h2,
   #project h2 {
     padding: 10px;
-    text-align: center;
+
   }
 
   .code-header {
@@ -156,7 +155,7 @@ body {
 
 
   footer {
-    background: rgb(29, 134, 103);
+    background: rgb(29, 136, 127);
     display: flex;
     min-height: 20vh;
     justify-content: space-between;
