--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
 
 
   section {
-    flex-basis: 400px;
+    flex-basis: 40%;
     flex-grow: 1;
     text-align: center;
   }
@@ -41,7 +41,7 @@ body {
     flex-direction: column;
     flex-wrap: nowrap;
     background: rgb(29, 136, 127);
-    min-height: 20vh;
+    
     align-items: space-around;
     font-size: 16px;
   }
@@ -81,37 +81,54 @@ body {
 
 
   #about-myself {
-    background:#2bb88d;
+    background:#3dc29a;
   }
 
 
   #contacts {
     background:#22c292;
   }
-
-  #skills {
-    flex-basis: 50%;
+  #hard-skills {
     background:#18ce97;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    flex-direction: column;
   }
 
   #education {
-    flex-basis: 50%;
     background:#25d8a2;
   }
 
-  #languages {
-    flex-basis: 50%;
+  #languages {    
     background:#22c292;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    flex-direction: column;
   }
 
-  #project {
-    flex-basis: 50%;
-    background: #2bb88d;
+  #soft-skills {
+    background: rgb(68, 204, 163);
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    flex-direction: column;
   }
 
   #code-example {
-    flex-basis: 100%;
+   
+    flex-basis: 50%;
     background:rgb(68, 204, 163);
+  }
+
+  #project {
+    background:  #2bb88d;
+    flex-basis: 50%;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    flex-direction: column;
   }
 
   #about-myself p {
@@ -122,14 +139,13 @@ body {
     padding: 30px 30px 30px 30px;
   }
 
-  #project p {
-    text-align: center;
-  }
+  
 
 
   #about-myself h2,
   #contacts h2,
-  #skills h2,
+  #hard-skills h2,
+  #soft-skills h2,
   #education h2,
   #languages h2,
   #project h2 {
@@ -137,19 +153,29 @@ body {
 
   }
 
-  .code-header {
-    background:rgb(68, 204, 163);
-    text-align: center;
+  pre {
+    width: 100%;
+    white-space: normal;
+    display: flex;
+    justify-content: left;
   }
 
-  pre {
+  pre code{
     color: rgb(38, 10, 88);
     font: sans-serif; 
+    text-align:justify;
+    white-space: pre-wrap;  
+    
+    
+    white-space: -moz-pre-wrap;  
+    white-space: -pre-wrap;      
+    white-space: -o-pre-wrap;    
+    word-wrap: break-word;  
   }
 
   .languages-list,
-  .skills-list {
-    text-align:justify;
+  .skills-list,
+  .contacts-list {
     list-style-type: none;
   }
 
@@ -157,7 +183,6 @@ body {
   footer {
     background: rgb(29, 136, 127);
     display: flex;
-    min-height: 20vh;
     justify-content: space-between;
     align-items: center;
   }
